## PhotoEditorViewController 기능 일부 구현 * 사진 액자 1~5번까지 구성. * 각 액자 영역 터치 시, 사진 앨범에서 사진을 가져올 수 있는 ViewController 팝업 * 사진 선택 시, 선택한 사진을 상대방에게 전송하여 같은 사진을 볼 수 있도록 기능 구현함 * 사진을 주고받는 통신 속도가 굉장히 느려서, 일반적인 데이터 전송방식이 아닌 resource send 방식을 사용해야 할 것으로 보인다. * sendData에 Key, Value값들 NSNumber numberWithInteger로 감싸지 않고, @() 형식으로 단순화하여 표현함.

--- a/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
@@ -23,8 +23,10 @@ alert_content_bluetooth_unsupported  = "Your device is not support a bluetooth 4
 alert_content_bluetooth_off          = "This application use a bluetooth.\nPlz, turn on bluetooth.";
 alert_content_invitation_received    = "wants to connect.";
 alert_content_session_disconnect_ask = "Do you really want to disconnect?";
-alert_content_session_disconnected   = "Your friend disconnect session";
+alert_content_session_disconnected   = "Your friend disconnect session.";
 alert_content_frame_select_confirm   = "Do you accept finish a frame selection?";
+alert_content_data_not_save          = "Do you really want to disconnect?\nUnsaved data will be deleted.";
+alert_content_continue               = "Your friend disconnect session.\nDo you want to continue photo edit?";
 
 progress_title_connecting            = "Connecting...";
 progress_title_connected             = "Connected!";
