--- a/wos_intern_project/wos_intern_project/ko.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/ko.lproj/Localizable.strings
@@ -25,6 +25,8 @@ alert_content_invitation_received    = "이 연결을 요청합니다.";
 alert_content_session_disconnect_ask = "정말 연결을 끊으시겠습니까?";
 alert_content_session_disconnected   = "친구와의 연결이 끊어졌습니다.";
 alert_content_frame_select_confirm   = "지금 선택한 액자로 결정하시겠습니까?";
+alert_content_data_not_save          = "정말 연결을 끊으시겠습니까?\n저장되지 않은 정보는 삭제됩니다.";
+alert_content_photo_edit_continue    = "친구와의 연결이 끊어졌습니다.\n사진 편집을 계속 하시겠습니까?";
 
 progress_title_connecting            = "연결중...";
 progress_title_connected             = "연결됨!";
