--- a/wos_intern_project/wos_intern_project/Base.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Localizable.strings
@@ -18,6 +18,7 @@ alert_title_invitation_received      = "초대장 도착";
 alert_title_session_disconnect_ask   = "연결 끊김";
 alert_title_session_disconnected     = "연결이 끊어짐";
 alert_title_frame_select_confirm     = "승인 요청";
+alert_title_album_not_authorized     = "권한 없음";
 
 alert_content_bluetooth_unsupported  = "스마트폰이 블루투스 4.0을 지원하지 않습니다.";
 alert_content_bluetooth_off          = "이 어플리케이션은 블루투스를 사용합니다.\n블루투스를 켜주세요.";
@@ -26,7 +27,8 @@ alert_content_session_disconnect_ask = "정말 연결을 끊으시겠습니까?"
 alert_content_session_disconnected   = "친구와의 연결이 끊어졌습니다.";
 alert_content_frame_select_confirm   = "지금 선택한 액자로 결정하시겠습니까?";
 alert_content_data_not_save          = "정말 연결을 끊으시겠습니까?\n저장되지 않은 정보는 삭제됩니다.";
-alert_content_continue               = "친구와의 연결이 끊어졌습니다.\n사진 편집을 계속 하시겠습니까?";
+alert_content_continue               = "친구와의 연결이 끊어졌습니다.\n사진 편집을 그만 하시겠습니까?";
+alert_content_album_not_authorized   = "사진 앨범에 접근할 수 있는 권한이 없습니다.\n설정 화면으로 이동하시겠습니까?";
 
 progress_title_connecting            = "연결중...";
 progress_title_connected             = "연결됨!";
