--- a/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
@@ -18,6 +18,7 @@ alert_title_invitation_received      = "Invitation Received";
 alert_title_session_disconnect_ask   = "Session Disconnect";
 alert_title_session_disconnected     = "Session Disconnected";
 alert_title_frame_select_confirm     = "Confirm Request";
+alert_title_album_not_authorized     = "Not Authorized";
 
 alert_content_bluetooth_unsupported  = "Your device is not support a bluetooth 4.0.";
 alert_content_bluetooth_off          = "This application use a bluetooth.\nPlz, turn on bluetooth.";
@@ -26,7 +27,8 @@ alert_content_session_disconnect_ask = "Do you really want to disconnect?";
 alert_content_session_disconnected   = "Your friend disconnect session.";
 alert_content_frame_select_confirm   = "Do you accept finish a frame selection?";
 alert_content_data_not_save          = "Do you really want to disconnect?\nUnsaved data will be deleted.";
-alert_content_continue               = "Your friend disconnect session.\nDo you want to continue photo edit?";
+alert_content_continue               = "Your friend disconnect session.\nDo you want to stop photo edit?";
+alert_content_album_not_authorized   = "This application needs album access authority.\nDo you want to go setting page?";
 
 progress_title_connecting            = "Connecting...";
 progress_title_connected             = "Connected!";
