## 공통적으로 사용하는 상수값 관리하는 Constants.h/Constants.m 추가, 코드 주석 처리

--- a/wos_intern_project/wos_intern_project/Base.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Localizable.strings
@@ -35,4 +35,5 @@ progress_title_connected             = "연결됨!";
 progress_title_confirming            = "승인중...";
 progress_title_confirmed             = "승인됨!";
 progress_title_rejected              = "거절됨!";
+progress_title_loadding              = "불러오는 중...";
 
