--- a/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
@@ -35,3 +35,4 @@ progress_title_connected             = "Connected!";
 progress_title_confirming            = "Confirming...";
 progress_title_confirmed             = "Confirmed!";
 progress_title_rejected              = "Rejected!";
+progress_title_loadding              = "Loadding...";
