--- a/wos_intern_project/wos_intern_project/Base.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Localizable.strings
@@ -27,7 +27,7 @@ alert_content_session_disconnect_ask = "정말 연결을 끊으시겠습니까?"
 alert_content_session_disconnected   = "친구와의 연결이 끊어졌습니다.";
 alert_content_frame_select_confirm   = "지금 선택한 액자로 결정하시겠습니까?";
 alert_content_data_not_save          = "정말 연결을 끊으시겠습니까?\n저장되지 않은 정보는 삭제됩니다.";
-alert_content_continue               = "친구와의 연결이 끊어졌습니다.\n사진 편집을 그만 하시겠습니까?";
+alert_content_photo_edit_continue    = "친구와의 연결이 끊어졌습니다.\n사진 편집을 그만 하시겠습니까?";
 alert_content_album_not_authorized   = "사진 앨범에 접근할 수 있는 권한이 없습니다.\n설정 화면으로 이동하시겠습니까?";
 
 progress_title_connecting            = "연결중...";
