--- a/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
@@ -27,7 +27,7 @@ alert_content_session_disconnect_ask = "Do you really want to disconnect?";
 alert_content_session_disconnected   = "Your friend disconnect session.";
 alert_content_frame_select_confirm   = "Do you accept finish a frame selection?";
 alert_content_data_not_save          = "Do you really want to disconnect?\nUnsaved data will be deleted.";
-alert_content_continue               = "Your friend disconnect session.\nDo you want to stop photo edit?";
+alert_content_photo_edit_continue    = "Your friend disconnect session.\nDo you want to stop photo edit?";
 alert_content_album_not_authorized   = "This application needs album access authority.\nDo you want to go setting page?";
 
 progress_title_connecting            = "Connecting...";
