## MainVC 버그 픽스 * 세션초기화 문제가 발생하여 재연결이 되지 않는 버그를 해결함

--- a/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
@@ -38,6 +38,7 @@ progress_title_connecting            = "Connecting...";
 progress_title_connected             = "Connected!";
 progress_title_confirming            = "Confirming...";
 progress_title_confirmed             = "Confirmed!";
+progress_title_cancelled             = "Canelled!";
 progress_title_rejected              = "Rejected!";
 progress_title_loadding              = "Loadding...";
 progress_title_saving                = "Saving...";
