--- a/wos_intern_project/wos_intern_project/Base.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/Base.lproj/Localizable.strings
@@ -38,6 +38,7 @@ progress_title_connecting            = "연결중...";
 progress_title_connected             = "연결됨!";
 progress_title_confirming            = "승인중...";
 progress_title_confirmed             = "승인됨!";
+progress_title_cancelled             = "취소됨!";
 progress_title_rejected              = "거절됨!";
 progress_title_loadding              = "불러오는 중...";
 progress_title_saving                = "저장 중...";
