## 사진 필터 기능 개발 * CropVC에 사진 필터 목록 표시 및 사진 필터 선택 시 필터 적용

--- a/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
+++ b/wos_intern_project/wos_intern_project/en.lproj/Localizable.strings
@@ -31,7 +31,7 @@ alert_content_session_disconnected   = "Your friend disconnect session.";
 alert_content_frame_select_confirm   = "Do you accept finish a frame selection?";
 alert_content_data_not_save          = "Do you really want to disconnect?\nUnsaved data will be deleted.";
 alert_content_photo_edit_continue    = "Your friend disconnect session.\nDo you want to stop photo edit?";
-alert_content_other_peer_not_entered = "You can use photo menu after friend entered this screen."; 
+alert_content_other_peer_not_entered = "You can use photo menu after\nfriend entered this screen.\nPlease try, after a moment."; 
 alert_content_album_not_authorized   = "This application needs album access authority.\nDo you want to go setting page?";
 alert_content_album_not_authorized   = "This application needs camera access authority.\nDo you want to go setting page?";
 alert_content_edit_finish            = "Unsaved data will delete.\nDo you want to finish photo edit?";
